--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,12 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
             <scope>test</scope>
-            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
